--- a/Home.css
+++ b/Home.css
@@ -1,3 +1,7 @@
+@font-face {
+    font-family:"Fontspring-DEMO-theseasons-reg";
+    src: url("Fontspring-DEMO-theseasons-reg.otf");
+  }
 main{
     position: relative;
     height: 90vh;
@@ -8,7 +12,43 @@ main{
     margin: 0%;
     padding: 0%;
 }
-.logo img{
+.navbar{
+    height:70px;
+}
+.navbar-brand img {
+    width: 80px;
+  }
+  .navbar-nav {
+    align-items: center;
+  }
+  .navbar .navbar-nav .nav-link {
+    color: #fff;
+    font-size: 1.1em;
+    padding: 0.5em 1em;
+  }
+  @media screen and (min-width: 768px) {
+    .navbar-brand img {
+      width: 100px;
+    }
+    .navbar-brand {
+      margin-right: 0;
+      padding: 0 1em;
+    }
+  }  
+.s-5 {
+    margin-left:350px;
+  }
+.logo2 img{
     margin-top:60px;
     margin-left:400px;
+}
+/* ___________________________________ */
+.marq{
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 12px;
+}
+.geek1 img{
+    height:40px;
+    padding:6px;
 }
