--- a/Home.css
+++ b/Home.css
@@ -52,3 +52,54 @@ main{
     height:40px;
     padding:6px;
 }
+.geek2{
+    display: flex;
+}
+.marq2 {
+    border-bottom: 1px solid black;
+    padding: 12px;
+}
+.geek2 img{
+    height: 30px;
+}
+/* ___________________________________ */
+#pic{
+    background-image: url("CC-wedding-pattern-design-stripes.jpg");
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0%;
+    padding: 0%;
+    height:90vh;
+    background-position: 50% 94%;
+    margin-left: -200px;
+}
+#pic img{
+    height:500px;
+    width:350px;
+    margin-left:170px;
+    margin-top:40px;
+}
+.table1{
+    width: 80vw;
+    margin:10px auto; 
+    display: grid;
+    grid-auto-rows:50px;
+    gap:70px;
+    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+    font-family:"Fontspring-DEMO-theseasons-reg";
+
+}
+#pic1{
+    background-color: #6c7d5a;
+    color: #fff;
+    padding: 12px;
+    height:450px;
+    width: 550px;
+    margin-right:220px;
+    margin-top:60px;
+}
+.j img{
+    height:150px;
+    width:140px;
+}
