--- a/cosmic ocassion by mehak/reception.css
+++ b/cosmic ocassion by mehak/reception.css
@@ -1,22 +1,52 @@
 body{
     padding:0px;
     margin:0px;
+    background-color: #62754c;
 }
 
 
-#back{
-    height:700px;
-    width:1200px;
-    background-image: url("reception\ main.jpeg");
-    background-size: cover;
+#nav{
+    height:100px;
 }
-#porfolio{
-    padding-left:500px;
-    padding-top:350px;
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;700&display=swap');
+
+
+
+
+
+.container {
+  text-align: center;
+  color: #62754c;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("receptionmain.jpg");
+  background-size: cover;
+  background-position: center;
+  
+/*  this is where the magic happens:  */
+  background-attachment: fixed;
+}
+h1 {
+    font-weight: 700;
+    font-size: 3rem;
     color:white;
-    font-size: 60px;
-    font: italic  "Fira Sans", serif;
+  }
+ 
+  .blank,
+.other {
+  width: 100%;
+  min-height: 40vh;
+  background-color: var(--color);
+  background-image: url("wed.jpg");
+  background-size: cover;
+
+
 }
+
 #mid{
     height:250px;
     text-align: center;
@@ -28,4 +58,21 @@ body{
     justify-content: space-around;
     margin-top: 50px;
     
+}
+
+  #ima:hover{
+    transform:scale(1.1);
+
+}
+#ima{
+  border:1px transparent;
+background-color: white;
+height:300px;
+width:300px;
+border-radius: 25px;
+border: 1px solid rgb(223, 220, 220);
+padding:20px;
+margin-left:15px;
+transition:transform 0.5s ease;
+transition-delay:1ms;
 }
