--- a/cosmic ocassion by mehak/reception.css
+++ b/cosmic ocassion by mehak/reception.css
@@ -54,25 +54,24 @@ h1 {
 
 }
 #contain{
-    display:flex;
-    justify-content: space-around;
-    margin-top: 50px;
-    
+  width: 90vw;
+  margin: 20px auto; 
+  display: grid;
+  grid-auto-rows: 200px;
+  gap: 100px 80px;
+  grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
 }
-
-  #ima:hover{
-    transform:scale(1.1);
+#ima:hover{
+  transform:scale(1.1);
 
 }
 #ima{
-  border:1px transparent;
-background-color: white;
-height:300px;
-width:300px;
+border:1px transparent;
+height:100%;
+width:100%;
 border-radius: 25px;
-border: 1px solid rgb(223, 220, 220);
+border: 10px solid rgb(223, 220, 220);
 padding:20px;
-margin-left:15px;
 transition:transform 0.5s ease;
 transition-delay:1ms;
 }
