--- a/cosmic ocassion by mehak/services.css
+++ b/cosmic ocassion by mehak/services.css
@@ -4,6 +4,43 @@ body{
    
 }
 
+.navbar{
+    height:70px;
+    font-family: "Libre Baskerville", serif;
+
+}
+.navbar-brand img {
+    width: 80px;
+  }
+  .navbar-nav {
+    align-items: center;
+  }
+  .navbar .navbar-nav .nav-link {
+    color: #fff;
+    font-size: 1.1em;
+    padding: 0.5em 1em;
+  }
+  @media screen and (min-width: 768px) {
+    .navbar-brand img {
+      width: 100px;
+    }
+    .navbar-brand {
+      margin-right: 0;
+      padding: 0 1em;
+    }
+  }  
+.s-5 {
+    margin-left:350px;
+  }
+.img-fluid{
+     max-width: 100%;
+     height: auto;
+}
+@media only screen and (max-width: 480px) {
+  img-fluid {
+    width: 100%;
+  }
+}
 #m{
     text-align: center;
     
