--- a/Home.css
+++ b/Home.css
@@ -41,14 +41,13 @@ main{
 .navbar{
     height:70px;
     font-family: "Libre Baskerville", serif;
-
 }
 .navbar-brand img {
     width: 80px;
   }
   .navbar-nav {
     align-items: center;
-  }
+    }
   .navbar .navbar-nav .nav-link {
     color: #fff;
     font-size: 1.1em;
@@ -62,7 +61,7 @@ main{
       margin-right: 0;
       padding: 0 1em;
     }
-  }  
+  } 
 .s-5 {
     margin-left:350px;
   }
@@ -126,16 +125,7 @@ main{
   color: #fff;
   text-align: center;
 }
-/*
-@media screen and (min-width: 768px) {
-#A{
-  display: grid;
-    grid-auto-rows: 200px;
-    gap: 10px;
-    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
-}
-} 
- _______________________________ */
+/*_______________________________ */
  .un{
     position: relative;
     height: 90vh;
@@ -218,9 +208,68 @@ main{
   margin: 0; 
   font-style: italic;
 }
-
 .overlay h2 {
   font-size:3rem; 
   margin: 0; 
   line-height:1.6; 
+}
+/* ------------------------------------------- */
+@media screen and (max-width: 768px) {
+  .logo2{
+    margin-top:-100px;
+  }
+  #t1{
+    background-image: url("CC-wedding-pattern-design-stripes.jpg");
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0%;
+    padding: 0%;
+    height:90vh;
+    background-position:80% 90%;
+    margin-left: -200px;
+    width:128vw;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  #t1 img{
+    height:370px;
+    width:280px;
+    align-self: center;
+    margin-left:25%;
+    margin-top:5%;
+  }
+  #t2{
+    height: 90vh;
+    text-align: center;
+    padding-top:45px;
+  }
+  #t2,#t1{
+    display: flex;
+    flex-direction: column;
+  }
+  #hi{
+    margin-top:-100px;
+  }
+  .booknine{
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .p3{
+      padding:4px;
+    }
+  .overlay{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+  .overlay h2 {
+    font-size:2.2rem; 
+    margin: 0; 
+    line-height:1.6;  
+  }
+}
+/* ------------------------------------------- */
+@media screen and (min-width: 320px) {
+
 }
