--- a/cosmic ocassion by mehak/corporate1.css
+++ b/cosmic ocassion by mehak/corporate1.css
@@ -5,8 +5,34 @@ body{
 }
 
 
-#nav{
-    height:100px;
+.navbar{
+  height:70px;
+  font-family: "Libre Baskerville", serif;
+
+}
+.navbar-brand img {
+  width: 80px;
+  margin-top:-11px;
+}
+.navbar-nav {
+  align-items: center;
+}
+.navbar .navbar-nav .nav-link {
+  color: #fff;
+  font-size: 1.1em;
+  padding: 0.5em 1em;
+}
+@media screen and (min-width: 768px) {
+  .navbar-brand img {
+    width: 100px;
+  }
+  .navbar-brand {
+    margin-right: 0;
+    padding: 0 1em;
+  }
+}  
+.s-5 {
+  margin-left:350px;
 }
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;700&display=swap');
 
@@ -16,7 +42,7 @@ body{
 
 .container {
   text-align: center;
-  color: #62754c;
+  color: white;
   width: 100%;
   min-height: 100vh;
   display: flex;
@@ -50,6 +76,7 @@ h1 {
   width: 90vw;
   margin: 20px auto; 
   display: grid;
+  margin-left:20px;
   grid-auto-rows: 200px;
   gap: 100px 80px;
   grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
@@ -60,11 +87,107 @@ h1 {
 }
 #ima{
 border:1px transparent;
-height:100%;
-width:100%;
+height:140%;
+width:110%;
 border-radius: 25px;
 border: 10px solid rgb(223, 220, 220);
 padding:20px;
 transition:transform 0.5s ease;
 transition-delay:1ms;
+}
+
+@media screen and (max-width:768px){
+  body{
+      padding:0px;
+      margin:0px;
+      background-color: #62754c;
+  }
+  .blank,
+  .other {
+    width: 768px;
+    min-height: 40vh;
+    background-color: var(--color);
+    background-image: url("wed.jpg");
+    background-size: cover;
+  
+  
+  }
+  
+  #mid{
+      height:250px;
+      text-align: center;
+      background-color: white;
+  width:768px;
+  }
+  .container {
+      text-align: center;
+      color: #62754c;
+      width:768px;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      background-image: url("receptionmain.jpg");
+      background-size: cover;
+      background-position: center;
+      
+    /*  this is where the magic happens:  */
+      background-attachment: fixed;
+    }
+    h1 {
+        font-weight: 700;
+        font-size: 3rem;
+        color:white;
+      }
+}
+@media screen and (max-width:475px){
+body{
+    padding:0px;
+    margin:0px;
+    background-color: #62754c;
+}
+.blank,
+.other {
+  width: 475px;
+  min-height: 40vh;
+  background-color: var(--color);
+  background-image: url("wed.jpg");
+  background-size: cover;
+
+
+}
+.navbar{
+  height:70px;
+  font-family: "Libre Baskerville", serif;
+width:475px;
+}
+
+#mid{
+    height:250px;
+    text-align: center;
+    background-color: white;
+width:475px;
+}
+.container {
+    text-align: center;
+    color: #62754c;
+    width:475px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-image: url("receptionmain.jpg");
+    background-size: cover;
+    background-position: center;
+    
+  /*  this is where the magic happens:  */
+    background-attachment: fixed;
+  }
+  h1 {
+      font-weight: 700;
+      font-size: 3rem;
+      color:white;
+    }
 }
