--- a/cosmic ocassion by mehak/porfolio.css
+++ b/cosmic ocassion by mehak/porfolio.css
@@ -8,7 +8,7 @@ body{
     height:700px;
     width:100%;
     background-image: url("portfolio\ background.jpeg");
-    background-size: contain;
+    background-size: cover;
 }
 #porfolio{
     padding-left:500px;
