--- a/cosmic ocassion by mehak/reception.css
+++ b/cosmic ocassion by mehak/reception.css
@@ -5,8 +5,34 @@ body{
 }
 
 
-#nav{
-    height:100px;
+.navbar{
+  height:70px;
+  font-family: "Libre Baskerville", serif;
+
+}
+.navbar-brand img {
+width: 80px;
+margin-top:-11px;
+}
+.navbar-nav {
+  align-items: center;
+}
+.navbar .navbar-nav .nav-link {
+  color: #fff;
+  font-size: 1.1em;
+  padding: 0.5em 1em;
+}
+@media screen and (min-width: 768px) {
+  .navbar-brand img {
+    width: 100px;
+  }
+  .navbar-brand {
+    margin-right: 0;
+    padding: 0 1em;
+  }
+}  
+.s-5 {
+  margin-left:350px;
 }
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;700&display=swap');
 
@@ -57,6 +83,7 @@ h1 {
   width: 90vw;
   margin: 20px auto; 
   display: grid;
+  margin-left:20px;
   grid-auto-rows: 200px;
   gap: 100px 80px;
   grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
@@ -67,8 +94,8 @@ h1 {
 }
 #ima{
 border:1px transparent;
-height:100%;
-width:100%;
+height:140%;
+width:110%;
 border-radius: 25px;
 border: 10px solid rgb(223, 220, 220);
 padding:20px;
