--- a/cosmic ocassion by mehak/services.css
+++ b/cosmic ocassion by mehak/services.css
@@ -10,8 +10,9 @@ body{
 
 }
 .navbar-brand img {
-    width: 80px;
-  }
+  width: 80px;
+  margin-top:-11px;
+}
   .navbar-nav {
     align-items: center;
   }
@@ -36,11 +37,7 @@ body{
      max-width: 100%;
      height: auto;
 }
-@media only screen and (max-width: 480px) {
-  img-fluid {
-    width: 100%;
-  }
-}
+
 #m{
     text-align: center;
     
@@ -81,4 +78,16 @@ body{
     text-align: center;
     line-height: 1.3;
     margin-left: 20px;
+}
+
+
+
+@media screen and (max-width:475px){
+ 
+  .navbar{
+    height:70px;
+    font-family: "Libre Baskerville", serif;
+  width:475px;
+  }
+  
 }
