--- a/Home.css
+++ b/Home.css
@@ -28,6 +28,9 @@
       url('LibreBaskerville-Regular.ttf') format('truetype');
   font-style: normal;
 }
+body{
+  background-color: #f7f9ec;
+}
 main{
     position: relative;
     height: 90vh;
@@ -104,7 +107,7 @@ main{
     width:350px;
 }
 #t1{
-  background-image: url("CC-wedding-pattern-design-stripes.jpg");
+  background-image: url("umgo.jpg");
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
@@ -120,7 +123,7 @@ main{
   width:120px;
 }
 #t2{
-  background-color: #6c7d5a;}
+  background-color: #6c7d5a  ;}
 #t1,#t2{
   color: #fff;
   text-align: center;
@@ -169,7 +172,7 @@ main{
   border-radius: 12px;
 }
 #smp{
-  background-color:#a2cb1d;
+  background-color:#5A7D7C ;
   color:white;
   height:40px;
   width:140px;
