--- a/cosmic ocassion by mehak/contact.css
+++ b/cosmic ocassion by mehak/contact.css
@@ -17,73 +17,204 @@ body{
     margin:0px;
     background-color: #6c7d5a;
 }
+.navbar{
+    height:70px;
+    font-family: "Libre Baskerville", serif;
+  
+  }
+  .navbar-brand img {
+    width: 80px;
+    margin-top:-11px;
+  }
+  .navbar-nav {
+    align-items: center;
+  }
+  .navbar .navbar-nav .nav-link {
+    color: #fff;
+    font-size: 1.1em;
+    padding: 0.5em 1em;
+  }
+  @media screen and (min-width: 768px) {
+    .navbar-brand img {
+      width: 100px;
+    }
+    .navbar-brand {
+      margin-right: 0;
+      padding: 0 1em;
+    }
+  }  
+  .s-5 {
+    margin-left:350px;
+  }
+  
+  
 #contactus{
     text-align: center;
     color:white;
     font-family:Sans serif fonts;
-    font-size: 50px;
+    font-size: 3rem;
     
 }
 #p{
     text-align: center;
     color:white;
-    font-size: 20px;
+    font-size: 1.5rem;
     font-family:'LibreBaskerville-Regular';
 
 }
 #contact{
     color:white;
     margin-left:300px;
-    font-size: 25px;
+    font-size: 1.5rem;
     font-family:'LibreBaskerville-Regular';
 
 }
 #fname,#lname,#Wedding,#location,#cat,#guest{
-    height:25px;
-    width:250px;
+    height:1.5rem;
+    width:15rem;
 }
 #email{
-    height:25px;
-    width:650px;
+    height:1.5rem;
+    width:40rem;
 }
 #phone{
-    height:25px;
-    width:550px;
+    height:1.5rem;
+    width:34rem;
 }
 #add{
-    height:25px;
-    width:750px;
+    height:1.5rem;
+    width:45rem;
 }
 #city{
-    height:25px;
-    width:300px;
+    height:1.5rem;
+    width:20rem;
 }
 #state{
-    height:25px;
-    width:220px;
+    height:1.5rem;
+    width:12rem;
 }
 #code{
-    height:25px;
-    width:575px;
+    height:1.5rem;
+    width:35rem;
 }
 #c{
-    height:25px;
-    width:660px;
+    height:1.5rem;
+    width:40rem;
 }
 #w{
-    height:25px;
-    width:470px;
+    height:1.5rem;
+    width:29rem;
 }
 
 #cat{
-    height:25px;
-    width:420px;
+    height:1.5rem;
+    width:26rem;
 }
 #guest{
-    height:25px;
-    width:340px;
+    height:1.5rem;
+    width:45rem;
 }
 #dest{
-    height:25px;
-    width:610px;
+    height:1.5rem;
+    width:38rem;
+}
+#images{
+    display:flex;
+    justify-items: space-between;
+}
+#text{
+    height:300px;
+    width:900px;
+}
+@media screen and (max-width:768px){
+    .navbar{
+        height:70px;
+        width:768px;
+        font-family: "Libre Baskerville", serif;
+    }    
+    #contactus{
+        text-align: center;
+        color:white;
+        font-family:Sans serif fonts;
+        font-size: 3rem;
+        
+    }
+    #p{
+        text-align: center;
+        color:white;
+        font-size: 1rem;
+        font-family:'LibreBaskerville-Regular';
+    
+    }
+    #contact{
+        color:white;
+        margin-left:100px;
+        font-size: 1.5rem;
+        font-family:'LibreBaskerville-Regular';
+    
+    }
+    #fname,#lname,#Wedding,#location,#cat,#guest{
+        height:1.5rem;
+        width:30rem;
+    }
+    #email{
+        height:1.5rem;
+        width:32rem;
+    }
+    #phone{
+        height:1.5rem;
+        width:37rem;
+    }
+    #add{
+        height:1.5rem;
+        width:37rem;
+    }
+    #city{
+        height:1.5rem;
+        width:33rem;
+    }
+    #state{
+        height:1.5rem;
+        width:27rem;
+    }
+    #code{
+        height:1.5rem;
+        width:37rem;
+    }
+    #c{
+        height:1.5rem;
+        width:31rem;
+    }
+    #w{
+        height:1.5rem;
+        width:36rem;
+    }
+    
+    #cat{
+        height:1.5rem;
+        width:36rem;
+    }
+    #guest{
+        height:1.5rem;
+        width:38rem;
+    }
+    #dest{
+        height:1.5rem;
+        width:38rem;
+    }
+    #images{
+        display:flex;
+        justify-items: space-between;
+    }
+    #text{
+        height:200px;
+        width:500px;
+    }
+}
+@media screen and (max-width:768px){
+    .navbar{
+        height:70px;
+        width:425px;
+        font-family: "Libre Baskerville", serif;
+    }    
 }
