--- a/cosmic ocassion by mehak/services.css
+++ b/cosmic ocassion by mehak/services.css
@@ -37,7 +37,74 @@ body{
      max-width: 100%;
      height: auto;
 }
+#serve{
+  width:100%;
+   height:700px;
+}
+#m{
+    text-align: center;
+    
+}
+#S{
+    font-size: 1.5rem;
+}
+#p{
+    font-size: 2rem;
+}
+#grey{
+    background-color: rgb(234, 228, 228);
+    width:100%;
+    height:500px;
+    display:flex;
+    flex-wrap: wrap;
+}
+#img{
+    margin-left: 20px;
+    margin-top:-50px;
+    height:450px;
+    width:450px;
+}
+#written{
+    font-size: 2rem;
+}
+#main{
+    display: flex;
+    flex-wrap: wrap;
+}
+#nation{
+    height:200px;
+    
+}
+#celeb{
+    text-align: center;
+}
+#count{
+    display: flex;
+    flex-wrap: wrap;
+    font-size:20px;
+    text-align: center;
+    line-height: 1.3;
+    margin-left: 20px;
+}
 
+@media screen and (max-width:768px){
+
+}
+
+
+@media screen and (max-width:425px){
+ 
+  .navbar{
+    height:70px;
+    font-family: "Libre Baskerville", serif;
+  width:475px;
+  }
+
+  #serve{
+  width:30px;
+   height:70px;
+   
+}
 #m{
     text-align: center;
     
@@ -56,6 +123,8 @@ body{
 #img{
     margin-left: 20px;
     margin-top:-50px;
+    height:450px;
+    width:450px;
 }
 #written{
     font-size: 2rem;
@@ -79,15 +148,4 @@ body{
     line-height: 1.3;
     margin-left: 20px;
 }
-
-
-
-@media screen and (max-width:475px){
- 
-  .navbar{
-    height:70px;
-    font-family: "Libre Baskerville", serif;
-  width:475px;
-  }
-  
 }
