--- a/cosmic ocassion by mehak/celebration.css
+++ b/cosmic ocassion by mehak/celebration.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #62754c;
+    background-color: white;
 }
 
 h1 {
@@ -55,15 +55,20 @@ h1 {
 .blank,
   .other {
     width: 100%;
-    min-height: 40vh;
+    min-height: 30vh;
     background-color: var(--color);
     background-image: url("wed.jpg");
     background-size: cover;
   
   
   }
+  #myVideo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+  }
 #ima {
-    border: 10px solid rgb(223, 220, 220);
+    border: 10px solid #6c7d5a;
     padding: 13px;
     margin: 10px;
     border-radius: 10px;
