--- a/cosmic ocassion by mehak/ceremonie.css
+++ b/cosmic ocassion by mehak/ceremonie.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #62754c;
+  background-color: white;
 }
 
 h1 {
@@ -19,7 +19,7 @@ h1 {
 
 .navbar-brand img {
   height: 100px;
-  margin-top:-40px;
+  margin-top:-30px;
 }
 
 .nav-link {
@@ -62,12 +62,24 @@ background-image: url("ceremonie\ main.jpeg");
 
 
 }
+.written{
+  font-size:2rem;
+  background-color: white;
+  text-align: center;
+  height:250px;
+  
+}
 #ima {
-  border: 10px solid rgb(223, 220, 220);
+  border: 10px solid #6c7d5a;
   padding: 13px;
   margin: 10px;
   border-radius: 10px;
   transition: transform 0.3s ease;
+}
+#myVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
 }
 
 #ima:hover {
@@ -81,7 +93,9 @@ background-image: url("ceremonie\ main.jpeg");
       width: 200px;
       height: 250px;
   }
-
+  .written{
+    font-size:1.5rem;
+    height:150px;}
   .navbar-nav .nav-link {
       font-size: 1rem;
       margin: 0 10px;
@@ -101,7 +115,9 @@ background-image: url("ceremonie\ main.jpeg");
   h1 {
       font-size: 1.5rem;
   }
-
+  .written{
+    font-size:1 rem;
+    height:150px;}
   .navbar-brand img {
       height: 100px;
       margin-bottom:-20px;
@@ -117,4 +133,9 @@ background-image: url("ceremonie\ main.jpeg");
 }
 .blank {
   height: 20px;
+}
+@media (max-width: 425px) {
+  written{
+    font-size:.5 rem;
+    height:150px;}
 }
