--- a/cosmic ocassion by mehak/contact.css
+++ b/cosmic ocassion by mehak/contact.css
@@ -1,220 +1,139 @@
 @font-face {
-    font-family:'LibreBaskerville-Regular';
-    src: url('LibreBaskerville-Regular.ttf');
-    src: local('Aileron-Regular'), local('LibreBaskerville-Regular'),
-        url('LibreBaskerville-Regular.eot?#iefix') format('embedded-opentype'),
-        url('LibreBaskerville-Regular.woff2') format('woff2'),
-        url('LibreBaskerville-Regular.woff') format('woff'),
-        url('LibreBaskerville-Regular.ttf') format('truetype');
+    font-family: 'LibreBaskerville-Regular';
+    src: url('LibreBaskerville-Regular.eot?#iefix') format('embedded-opentype'),
+         url('LibreBaskerville-Regular.woff2') format('woff2'),
+         url('LibreBaskerville-Regular.woff') format('woff'),
+         url('LibreBaskerville-Regular.ttf') format('truetype');
     font-style: normal;
-  }
-  *{
-    font-family:'LibreBaskerville-Regular';
+}
 
-  }
-body{
-    padding:0px;
-    margin:0px;
+* {
+    font-family: 'LibreBaskerville-Regular', serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
     background-color: #6c7d5a;
 }
-.navbar{
-    height:70px;
+
+.navbar {
+    height: 70px;
     font-family: "Libre Baskerville", serif;
-  
-  }
-  .navbar-brand img {
+}
+
+.navbar-brand img {
     width: 80px;
-    margin-top:-11px;
-  }
-  .navbar-nav {
+    margin-top: -11px;
+}
+
+.navbar-nav {
     align-items: center;
-  }
-  .navbar .navbar-nav .nav-link {
+}
+
+.navbar .navbar-nav .nav-link {
     color: #fff;
     font-size: 1.1em;
     padding: 0.5em 1em;
-  }
-  @media screen and (min-width: 768px) {
+}
+
+@media screen and (min-width: 768px) {
     .navbar-brand img {
-      width: 100px;
+        width: 100px;
     }
     .navbar-brand {
-      margin-right: 0;
-      padding: 0 1em;
+        margin-right: 0;
+        padding: 0 1em;
     }
-  }  
-  .s-5 {
-    margin-left:350px;
-  }
-  
-  
-#contactus{
+}
+
+#contactus {
     text-align: center;
-    color:white;
-    font-family:Sans serif fonts;
+    color: white;
     font-size: 3rem;
-    
 }
-#p{
+
+#p {
     text-align: center;
-    color:white;
+    color: white;
     font-size: 1.5rem;
-    font-family:'LibreBaskerville-Regular';
-
 }
-#contact{
-    color:white;
-    margin-left:300px;
+
+#contact {
+    color: white;
+    margin: 0 auto;
+    max-width: 800px; 
+    padding: 1em;
     font-size: 1.5rem;
-    font-family:'LibreBaskerville-Regular';
-
-}
-#fname,#lname,#Wedding,#location,#cat,#guest{
-    height:1.5rem;
-    width:15rem;
-}
-#email{
-    height:1.5rem;
-    width:40rem;
-}
-#phone{
-    height:1.5rem;
-    width:34rem;
-}
-#add{
-    height:1.5rem;
-    width:45rem;
-}
-#city{
-    height:1.5rem;
-    width:20rem;
-}
-#state{
-    height:1.5rem;
-    width:12rem;
-}
-#code{
-    height:1.5rem;
-    width:35rem;
-}
-#c{
-    height:1.5rem;
-    width:40rem;
-}
-#w{
-    height:1.5rem;
-    width:29rem;
 }
 
-#cat{
-    height:1.5rem;
-    width:26rem;
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em; 
 }
-#guest{
-    height:1.5rem;
-    width:45rem;
+
+form label {
+    font-size: 1rem;
 }
-#dest{
-    height:1.5rem;
-    width:38rem;
+
+form input,
+form textarea {
+    padding: 0.5em;
+    border: 1px solid #ddd;
+    border-radius: 4px;
 }
-#images{
-    display:flex;
-    justify-items: space-between;
+
+form input[type="submit"] {
+    background-color: #fff;
+    color: #6c7d5a;
+    border: none;
+    padding: 0.75em 1.5em;
+    font-size: 1rem;
+    cursor: pointer;
 }
-#text{
-    height:300px;
-    width:900px;
+input checkbox{
+height:700px;
+width:70px;
 }
-@media screen and (max-width:768px){
-    .navbar{
-        height:70px;
-        width:768px;
-        font-family: "Libre Baskerville", serif;
-    }    
-    #contactus{
-        text-align: center;
-        color:white;
-        font-family:Sans serif fonts;
-        font-size: 3rem;
-        
+
+form input[type="submit"]:hover {
+    background-color: #ddd;
+}
+
+@media screen and (max-width: 768px) {
+    #contactus {
+        font-size: 2rem;
     }
-    #p{
-        text-align: center;
-        color:white;
+
+    #p {
         font-size: 1rem;
-        font-family:'LibreBaskerville-Regular';
-    
     }
-    #contact{
-        color:white;
-        margin-left:100px;
-        font-size: 1.5rem;
-        font-family:'LibreBaskerville-Regular';
-    
+
+    #contact {
+        font-size: 1.2rem;
+        padding: 0.5em;
     }
-    #fname,#lname,#Wedding,#location,#cat,#guest{
-        height:1.5rem;
-        width:30rem;
+
+    .navbar {
+        height: auto;
     }
-    #email{
-        height:1.5rem;
-        width:32rem;
+
+    .navbar-brand img {
+        width: 70px;
     }
-    #phone{
-        height:1.5rem;
-        width:37rem;
+
+    form {
+        gap: 0.75em;
     }
-    #add{
-        height:1.5rem;
-        width:37rem;
+
+    form input,
+    form textarea {
+        width: 100%;
     }
-    #city{
-        height:1.5rem;
-        width:33rem;
+
+    form input[type="submit"] {
+        width: 100%;
     }
-    #state{
-        height:1.5rem;
-        width:27rem;
-    }
-    #code{
-        height:1.5rem;
-        width:37rem;
-    }
-    #c{
-        height:1.5rem;
-        width:31rem;
-    }
-    #w{
-        height:1.5rem;
-        width:36rem;
-    }
-    
-    #cat{
-        height:1.5rem;
-        width:36rem;
-    }
-    #guest{
-        height:1.5rem;
-        width:38rem;
-    }
-    #dest{
-        height:1.5rem;
-        width:38rem;
-    }
-    #images{
-        display:flex;
-        justify-items: space-between;
-    }
-    #text{
-        height:200px;
-        width:500px;
-    }
-}
-@media screen and (max-width:768px){
-    .navbar{
-        height:70px;
-        width:425px;
-        font-family: "Libre Baskerville", serif;
-    }    
 }
