--- a/cosmic ocassion by mehak/reception.css
+++ b/cosmic ocassion by mehak/reception.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #62754c;
+  background-color: white;
 }
 
 h1 {
@@ -61,8 +61,20 @@ h1 {
 
 
 }
+.written{
+  font-size:2rem;
+  background-color: white;
+  text-align: center;
+  height:250px;
+  
+}
+#myVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
 #ima {
-  border: 10px solid rgb(223, 220, 220);
+  border: 10px solid #6c7d5a;
   padding: 13px;
   margin: 10px;
   border-radius: 10px;
@@ -89,6 +101,9 @@ h1 {
       height: 100px;
       margin-bottom:-30px;
   }
+  .written{
+    font-size:1.5rem;
+    height:150px;}
 }
 
 @media (max-width: 576px) {
@@ -116,6 +131,11 @@ h1 {
 }
 .blank {
   height: 20px;
+}
+@media (max-width: 425px) {
+  written{
+    font-size:.5 rem;
+    height:150px;}
 }
 
 
