--- a/cosmic ocassion by mehak/services.css
+++ b/cosmic ocassion by mehak/services.css
@@ -1,151 +1,209 @@
-body{
-    padding:0px;
-    margin:0px;
-   
+body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Libre Baskerville', serif;
 }
 
-.navbar{
-    height:70px;
-    font-family: "Libre Baskerville", serif;
-
+.navbar {
+    height: 70px;
+    background-color: #6c7d5a; 
 }
+
 .navbar-brand img {
-  width: 80px;
-  margin-top:-11px;
+    width: 80px;
+    margin-top: -11px;
 }
-  .navbar-nav {
+
+.navbar-nav {
     align-items: center;
-  }
-  .navbar .navbar-nav .nav-link {
+}
+
+.navbar .navbar-nav .nav-link {
     color: #fff;
     font-size: 1.1em;
     padding: 0.5em 1em;
-  }
-  @media screen and (min-width: 768px) {
+}
+
+
+@media screen and (min-width: 768px) {
     .navbar-brand img {
-      width: 100px;
+        width: 100px;
     }
+
     .navbar-brand {
-      margin-right: 0;
-      padding: 0 1em;
+        margin-right: 0;
+        padding: 0 1em;
     }
-  }  
-.s-5 {
-    margin-left:350px;
-  }
-.img-fluid{
-     max-width: 100%;
-     height: auto;
 }
-#serve{
-  width:100%;
-   height:700px;
+
+
+#serve {
+    width: 100%;
+    height: 700px;
+    object-fit: cover; 
 }
-#m{
+
+
+#m {
     text-align: center;
-    
+    padding: 20px;
 }
-#S{
+
+#S {
     font-size: 1.5rem;
 }
-#p{
+
+#p {
     font-size: 2rem;
+    line-height: 1.5;
 }
-#grey{
+
+
+#grey {
     background-color: rgb(234, 228, 228);
-    width:100%;
-    height:500px;
-    display:flex;
-    flex-wrap: wrap;
-}
-#img{
-    margin-left: 20px;
-    margin-top:-50px;
-    height:450px;
-    width:450px;
-}
-#written{
-    font-size: 2rem;
-}
-#main{
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
 }
-#nation{
-    height:200px;
+
+#img {
+    margin: 20px;
+    margin-top:-140px;
+    height: auto;
+    width: 100%;
+    max-width: 450px; 
     
 }
-#celeb{
-    text-align: center;
+
+#written {
+    font-size: 2rem;
 }
-#count{
+
+
+#main {
     display: flex;
     flex-wrap: wrap;
-    font-size:20px;
+    justify-content: center;
+}
+
+#nation {
     text-align: center;
+    padding: 20px;
+}
+
+#celeb {
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+#count {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1rem;
     line-height: 1.3;
-    margin-left: 20px;
+    margin: 0 auto;
+    padding: 0;
+    list-style: none;
 }
 
-@media screen and (max-width:768px){
-
+#count li {
+    margin: 5px 15px;
 }
 
+@media (max-width: 768px) {
+    .navbar .navbar-nav .nav-link {
+        font-size: 1em;
+        padding: 0.5em;
+    }
 
-@media screen and (max-width:425px){
- 
-  .navbar{
-    height:70px;
-    font-family: "Libre Baskerville", serif;
-  width:475px;
-  }
+    #serve {
+        height: 400px; 
+    }
 
-  #serve{
-  width:30px;
-   height:70px;
-   
+    #S {
+        font-size: 1.25rem;
+    }
+
+    #p {
+        font-size: 1.5rem;
+    }
+
+    #img {
+        width: 100%;
+        max-width: 100%;
+        height: 700px;
+        margin-top:-140px;
+    }
+
+    #written {
+        font-size: 1.5rem;
+    }
+
+    #count {
+        font-size: 0.875rem;
+    }
+
+    #count li {
+        margin: 5px;
+    }
 }
-#m{
-    text-align: center;
-    
+
+@media (max-width: 576px) {
+    .navbar .navbar-nav .nav-link {
+        font-size: 0.875em;
+        padding: 0.5em;
+    }
+
+    #serve {
+        height: 300px; 
+    }
+
+    #S {
+        font-size: 1rem;
+    }
+
+    #p {
+        font-size: 1.25rem;
+    }
+
+    #img {
+        width: 100%;
+        max-width: 100%;
+        height: 700px;
+        margin-top:-140px;
+    }
+
+    #written {
+        font-size: 1rem;
+    }
+
+    #count {
+        font-size: 0.75rem;
+    }
+
+    #count li {
+        margin: 5px 10px;
+    }
 }
-#S{
-    font-size: 1.5rem;
-}
-#p{
-    font-size: 2rem;
-}
-#grey{
-    background-color: rgb(234, 228, 228);
-    width:100%;
-    height:450px;
-}
-#img{
-    margin-left: 20px;
-    margin-top:-50px;
-    height:450px;
-    width:450px;
-}
-#written{
-    font-size: 2rem;
-}
-#main{
-    display: flex;
-    justify-content: space-between;
-}
-#nation{
-    height:200px;
-    
-}
-#celeb{
-    text-align: center;
-}
-#count{
-    display: flex;
-    flex-wrap: wrap;
-    font-size:20px;
-    text-align: center;
-    line-height: 1.3;
-    margin-left: 20px;
-}
+@media (max-width: 425px) {
+
+    #img {
+        width: 300px;
+        max-width: 100%;
+        margin-top:-1400px;
+        height: 600px;
+    }
+    #written {
+        font-size: .5rem;
+    }
+
+    #count {
+        font-size: 0.75rem;
+    }
+
+    #count li {
+        margin: 5px 10px;
+    }
 }
