--- a/Home.css
+++ b/Home.css
@@ -339,7 +339,7 @@ table{
   padding: 20px;
   list-style: none;
   text-decoration: none;
-  color: #fff;
+  color: #c7a4a4;
   font-family: "Libre Baskerville", serif;
   background-size: contain;
   background-repeat: no-repeat;
@@ -354,7 +354,12 @@ table{
   text-decoration: none;
   font-weight: bold;
 }
-
+#one{
+  margin-right:1px;
+}
+#two,#three{
+  padding: 2%;
+}
 #lg{
   height:130px;
   width:130px;
