--- a/cosmic ocassion by mehak/ceremonie.css
+++ b/cosmic ocassion by mehak/ceremonie.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: white;
+  background-color: #6c7d5a;
 }
 
 h1 {
@@ -51,6 +51,7 @@ background-image: url("ceremonie\ main.jpeg");
   justify-content: center;
   margin: 20px auto;
   max-width: 1200px;
+  background-color: white;
 }
 .blank,
 .other {
@@ -84,6 +85,34 @@ background-image: url("ceremonie\ main.jpeg");
 
 #ima:hover {
   transform: scale(1.05);
+}
+footer{
+  background-color: #6c7d5a;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+}
+table{
+  margin-left: 8%;
+  margin-right:8%;
+}
+
+.logo-container {
+  background-color: #6c7d5a;
+  display: flex;
+  align-items: center;
+  color: #fff;
+}
+.logo img{
+  height:100px;
+}
+.line {
+  flex-grow: 1;
+  height: 2px;
+  background-color: #fff;
+  margin: 0 20px;
 }
 
 
