--- a/cosmic ocassion by mehak/contact.css
+++ b/cosmic ocassion by mehak/contact.css
@@ -93,9 +93,9 @@ form input[type="submit"] {
     font-size: 1rem;
     cursor: pointer;
 }
-input checkbox{
-height:700px;
-width:70px;
+input[type="checkbox"] {
+height:20px;
+width:100px;
 }
 
 form input[type="submit"]:hover {
