--- a/cosmic ocassion by mehak/corporate1.css
+++ b/cosmic ocassion by mehak/corporate1.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #62754c;
+  background-color:  #6c7d5a;
 }
 
 h1 {
@@ -50,6 +50,7 @@ h1 {
   justify-content: center;
   margin: 20px auto;
   max-width: 1200px;
+  background-color: white;
 }
 .blank,
 .other {
@@ -62,7 +63,7 @@ h1 {
 
 }
 #ima {
-  border: 10px solid rgb(223, 220, 220);
+  border: 10px solid #6c7d5a;
   padding: 13px;
   margin: 10px;
   border-radius: 10px;
