--- a/cosmic ocassion by mehak/porfolio.css
+++ b/cosmic ocassion by mehak/porfolio.css
@@ -3,6 +3,21 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
 }
+.navbar {
+    padding: 1rem 2rem;
+  }
+  
+  .navbar-brand img {
+    height: 100px;
+    margin-top:-40px;
+  }
+  
+  .nav-link {
+    font-family: 'Libre Baskerville', serif;
+    font-size: 1.2rem;
+    color: #fff !important;
+    margin: 0 15px;
+  }
 
 
 #back {
