--- a/cosmic ocassion by mehak/reception.css
+++ b/cosmic ocassion by mehak/reception.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: white;
+  background-color: #6c7d5a;
 }
 
 h1 {
@@ -50,6 +50,7 @@ h1 {
   justify-content: center;
   margin: 20px auto;
   max-width: 1200px;
+  background-color: white;
 }
 .blank,
 .other {
