--- a/About.css
+++ b/About.css
@@ -145,18 +145,17 @@
     max-width:500px;
 }
 /* ------------------------------------------- */
-/* ------------------------------------------- */
 footer{
   background-color: #6c7d5a;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding: 20px;
 }
 table{
-  margin-left: 8%;
-  margin-right:8%;
+  margin-left:0;
+  margin-right:0;
+  margin-bottom:1%;
 }
 .logo-container {
   background-color: #6c7d5a;
@@ -193,6 +192,11 @@ table{
   font-size:60px;
   text-align: center;
 }
+.next h7{
+  color: #fff;
+  font-family: "Libre Baskerville", serif;
+  font-size:70%;
+}
 #link {
   background-image: url('Ann-Travis-Botanical4-removebg-preview.png');
   background-size: cover;
@@ -200,7 +204,7 @@ table{
   padding: 20px;
   list-style: none;
   text-decoration: none;
-  color: #fff;
+  color: #c7a4a4;
   font-family: "Libre Baskerville", serif;
   background-size: contain;
   background-repeat: no-repeat;
@@ -215,10 +219,12 @@ table{
   text-decoration: none;
   font-weight: bold;
 }
-
+#one{
+  margin-right:1px;
+}
 #lg{
-  height:100px;
-  width:100px;
+  height:130px;
+  width:130px;
 }
 #button{
   text-decoration: none;
