--- a/contact.css
+++ b/contact.css
@@ -59,8 +59,8 @@ body {
     text-align: center;
     color: white;
     font-size: 3rem;
-    font-family: 'Absolute Beauty';
-}
+    font-family:'LibreBaskerville-Regular';
+  }
 
 #p {
     text-align: center;
