--- a/ceremonie.css
+++ b/ceremonie.css
@@ -68,8 +68,7 @@ background-image: url("ceremonie\ main.jpeg");
   max-width: 1200px;
   background-color: white;
 }
-.blank,
-.other {
+.blank{
   width: 100%;
   min-height: 40vh;
  
