--- a/pika.css
+++ b/pika.css
@@ -1,63 +1,47 @@
-* { 
-    margin : 0;
-    padding: 0;
-    box-sizing : border-box;
-    font-family : "Poppins", sans-serif;
-  }
-  body {
-    display : flex;
-    align-items : center;
-    justify-content : center;  
-    background-color: #43345d;
-    min-height : 800px;
+
+  
+  .container1 {
+   display:flex;
+   flex-wrap:wrap;
+    padding : 50px;  
+   
   }
   
-  .container {
-    position : relative;
-    width : 1100px;
-    display : flex;
-    align-items : center;
-    justify-content : center;
-    flex-wrap : wrap;
-    padding : 30px;  
-  }
-  
-  .container .card {
+  .container1 .card {
     position: relative;
+   
     max-width : 300px;
     height : 215px;  
     background-color : #fff;
     margin : 30px 10px;
     padding : 20px 15px;
-    
     display : flex;
     flex-direction : column;
     box-shadow : 0 5px 20px rgba(0,0,0,0.5);
     transition : 0.3s ease-in-out;
     border-radius : 15px;
   }
-  .container .card:hover {
+  .container1 .card:hover {
     height : 320px;    
   }
   
   
-  .container .card .image {
+  .container1 .card .image {
     position : relative;
     width : 260px;
     height : 260px;
-    
     top : -40%;
     left: 8px;
     box-shadow : 0 5px 20px rgba(0,0,0,0.2);
     z-index : 1;
   }
   
-  .container .card .image img {
+  .container1 .card .image img {
     max-width : 100%;
     border-radius : 15px;
   }
   
-  .container .card .content {
+  .container1 .card .content {
     position : relative;
     top : -140px;
     padding : 10px 15px;
@@ -69,7 +53,7 @@
       
   }
   
-  .container .card:hover .content {
+  .container1 .card:hover .content {
      margin-top : 30px;
      visibility : visible;
      opacity : 1;
