--- a/React/Cosmic-App/src/Contact.css
+++ b/React/Cosmic-App/src/Contact.css
@@ -62,7 +62,7 @@
     font-family:'LibreBaskerville-Regular';
   }
 
-#p {
+#po {
     text-align: center;
     color: white;
     font-size: 1.5rem;
