--- a/React/Cosmic-App/src/Portfolio.css
+++ b/React/Cosmic-App/src/Portfolio.css
@@ -42,7 +42,7 @@ body {
     font-weight: bold;
     margin: 0;
     padding: 20px;
-    color:black;
+    color:#fff;
 }
 
 /* Add the rest of your CSS here... */
@@ -102,7 +102,9 @@ body {
       width: 100%; 
       box-sizing: border-box; 
   }
-  
+  #p{
+    color: black;
+  }
   
   #por{
       width: 100%; 
